  *   - Added ability to write protect Mass Storage disk write operations from the host OS
  *   - Added new MIDIToneGenerator project
  *   - Added new KeyboardMouseMultiReport Device ClassDriver demo
  *   - Added new VirtualSerialMassStorage Device ClassDriver demo
  *   - Added HID class bootloader, compatible with a modified version of the command line Teensy loader from PJRC.com
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - Unordered Endpoint/Pipe configuration is now allowed once again by default via the previous reconfig workaround
  *   - Refactored Host mode Class Driver *_Host_ConfigurePipes() routines to be more space efficient when compiled
  *   - Added new *_ENUMERROR_PipeConfigurationFailed error codes for the *_Host_ConfigurePipes() routines
  *   - The USARTStream global is now public and documented in the SerialStream module, allowing for the serial USART
  *     stream to be accessed via its handle rather than via the implicit stdout and stdin streams
  *   - The FAST_STREAM_TRANSFERS compile time option has been removed due to lack of use and low cost/benefit ratio
  *   - Altered all endpoint/pipe stream transfers so that the new BytesProcessed parameter now points to a location
  *     where the number of bytes in the transfer that have been completed can be stored (or NULL if entire transaction
  *     should be performed in one chunk)
  *   - The NO_STREAM_CALLBACKS compile time option has now been removed due to the new partial stream transfer feature
  *   - Changed over all project and demo HID report descriptors to use the new HID report item macros
  *   - Moved the HIDParser.c source file to the LUFA/Drivers/USB/Class/Common/ directory from the LUFA/Drivers/USB/Class/Host/
  *   - Added support to the HID parser for extended USAGE items that contain the usage page as well as the usage index
  *   - Removed the SerialStream driver, rolled functionality into the regular Serial peripheral driver via the new